openssl-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: openssl-svc
spec:
  selector:
    app: openssl-server
  ports:
    - port: 443
      targetPort: 4433
