openssl-server/gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: openssl-gw
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 443
        name: tls-openssl
        protocol: TLS
      tls:
        mode: PASSTHROUGH
      hosts:
        - "openssl.example.com"
