openssl-server/dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: openssl-dr
spec:
  host: openssl-svc.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
